prevent text overflowing

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -77,4 +77,8 @@
   .article ul {
     @apply mb-4;
   }
+
+  .article {
+    @apply break-all;
+  }
 }
